--- a/name.tex
+++ b/name.tex
@@ -146,7 +146,7 @@ Across languages, words are composed of morphemes, commonly defined as the small
 Morphemes can take different shapes.
 In many cases, words can be segmented into a sequence of morphemes, as in the English word runners (root run-, derivation -er-, plural -s).
 The order of morphemes within a word follows well-documented cross-linguistic tendencies, for instance, plural markers tend to be closer to noun stems than case markers \citep[112]{greenberg1963universals}.
-These tendencies have been explained in terms of the relative scope of different morphemes  \citep{givon1971historical,venneman1973explanation,baker1985the,rice2000morpheme} and the strength of their semantic association with the root \citep{bybee-morphology-1985}.
+These tendencies have been explained in terms of the relative scope of different morphemes  \citep{rice2000morpheme}, parallelism between morphology and syntax \citep{givon1971historical,venneman1973explanation,baker1985the}, and the strength of their semantic association with the root \citep{bybee-morphology-1985}.
 %One family of explanations holds that those affixes are closest to the root that are most relevant to the root \citep{bybee-morphology-1985}.
 %Other explanations suggest that morphemes are ordered based on (TODO CITE).
 
@@ -156,6 +156,10 @@ Formally, they introduced the notion of a memory-surprisal tradeoff: Depending o
 Optimizing the memory-surprisal tradeoff amounts to putting elements together when they predict each other strongly, as measured by mutual information.
 In a case study, CITE apply this to morpheme ordering in Japanese and Sesotho, finding that optimization could partly reproduce morpheme ordering in these languages.
 They also suggested that mutual information formalizes previous notions of strength of semantic association, such as \cite{bybee-morphology-1985}'s notion of \textit{relevance}.
+
+
+
+
 
 
 In this work, we examine this theory on a broader basis by considering data from four additional languages.
@@ -193,6 +197,7 @@ This principle of information locality TODO
 \citet{Hahn2020modeling} proposed a cognitive principle that aims to unify and formalize these locality principles in the form of a Memory--Surprisal Tradoff.
 This is a cognitive account of the order of words and morphemes in human language, based on a formalization of memory efficiency in incremental processing.
 The memory-surprisal tradeoff links information-theoretic models of memory limitations with surprisal theory.
+
 Surprisal theory \citep{hale2001probabilistic, levy2008expectation} is a theory of the word-by-word processing difficulty in online processing.
 It states that the processing effort on a word $w_t$ in context $w-1 ... w_{t-1}$ is proportional to its surprisal
      \begin{equation}   \label{eq:true-surp}
@@ -200,12 +205,12 @@ It states that the processing effort on a word $w_t$ in context $w-1 ... w_{t-1}
 \end{equation}
 Surprisal as estimated by corpus-based methods or cloze is a successful predictor of reading time on naturalistic text \citep{smith2013effect,goodkind-predictive-2018,frank2019interaction,aurnhammer2019evaluating,wilcox2020predictive} (TODO citation based on Cloze).
 Surprisal theory is a computational-level theory; it can be justified in terms of different mechanisms such as preactivation and integration~\citep{kuperberg2016we}.
-
-A key idea of the Memory--Surprisal Tradeoff is that, due to limitations in human memory, human expectations in reality do not reflect the true context $w_1\dots w_{t-1}$, but some memory representation $m\_t$:
+\citet{Hahn2020modeling} argue that, due to limitations in human memory, human expectations in reality do not reflect the true context $w_1\dots w_{t-1}$, but some memory representation $m\_t$:
 \begin{equation}   \label{eq:lossy-surp}
     \text{Difficulty} \propto -\log P(w_t | m_t).
 \end{equation}
-There is a tradeoff between average surprisal and memory capacity:
+
+Furthermore, they show that there is a tradeoff between average surprisal and memory capacity:
 The more information a listener stores in $m_t$, the lower their surprisal will be on average.
 This is because higher precision of memory leads to more precise expectations, which will achiever lower surprisal on average.
 More formally, given a function $M$ encoding contexts $w_1\dots w_{t_1}$ into memory representations $m_t$, there is a tradeoff between, on the one hand, the average surprisal $S\_M$, obtained by averaging $\log P(w_t , m_t)$ across the words in a text, and the memory capacity $H_M$, formalized as the average number of bits required to encode $m_t$.
@@ -228,7 +233,7 @@ The key quantity derived from this is the mutual information between elements (s
 \begin{equation*}
     I_t \equiv \operatorname{I}[w_t : w_0 , w_1, \dots, w_{t-1}].
 \end{equation*}
-Based on this notion, \citet{Hahn2020modeling}  prove the following bound on the memory-surprisal tradeoff ($S_\infty$ is the average surprisal that would be achieved with perfectly veridical memory representations):
+Based on this notion, \citet{Hahn2020modeling}  prove the following bound on the memory-surprisal tradeoff :
 \begin{thm}\label{prop:suboptimal}(Information locality bound, \citet{Hahn2020modeling})
 For any positive integer $T$, let $M$ be a memory encoding function such that
 \begin{equation}
@@ -240,10 +245,11 @@ Then we have a lower bound on the average surprisal under the memory encoding fu
 \label{eq:surprisal-bound}
 S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
 \end{equation}
+where $S_\infty$ is the average surprisal that would be achieved with perfectly veridical memory representations.
 \end{thm}
 
 
-A key consequence of this theorem is information locality:
+A key consequence of this theorem is an information-theoretic notion of locality:
 Informally, orderings optimize this tradeoff when elements with high mutual information are closer together.
 A similar notion of information locality was previous derived by \citet{futrell2020lossy} for a specific family of memory representations $M$.
 Information locality has had success as a predictor of word order \citep{futrell2019information}, in particular for universals of the order inside noun phrases \citep{culbertson2020from,hahn-information-theoretic-2018,DBLP:conf/acl/FutrellDS20}.
@@ -293,7 +299,10 @@ Based on data from several dozens of languages, \citep{bybee-morphology-1985} pr
 verb stem & valence & voice & aspect & tense& mood & subject agreement
 \end{tabular}
 \end{quote}
-\textit{Valence} affixes change the number of arguments. A very common type of valence affix is a causative, which adds an argument. In Turkish, -t- marks causatives:
+
+ Table~\ref{tab:table-orders}
+
+\textit{Valence} affixes change the number of arguments. A very common type of valence affix is a causative, which adds an argument. In Turkish, -t- marks causatives (CITE):
 
 \begin{tabular}{lllll}
 a) & çıldır-ır-ım \\
@@ -305,7 +314,7 @@ b) & çıldır-t-ır-ım \\
 \end{tabular}
 
 %In our dataset, Sesotho has the largest number of valence categories.
-\textit{Voice} describes the distinction between active and passive:
+\textit{Voice} describes the distinction between active and passive. An example is the Japanese passive suffix -(r)are- (CITE):
 
 \begin{tabular}{llllll}
 a) & mi-mash-yoo \\
@@ -318,14 +327,14 @@ b) & mi-rare-mash-yoo \\
 
 
 
-\textit{Aspect} describes how an event unfolds over time, such as the English progressive -ing indicating that an action  is still ongoing.
-\textit{Tense} describes where an event is located in time (e.g. past or future).
-Aspect and tense categories are often fused.
+\textit{Aspect} describes how an event unfolds over time, such as the English progressive -\textit{ing} indicating that an action  is still ongoing (CITE).
+\textit{Tense} describes where an event is located in time (e.g. past or future, CITE).
+Aspect and tense categories are often fused in morphology (CITE).
 
 TODO example
 
-\textit{Mood} describes a relation between an event and the speaker, including an assessment of the event's reality.
-An example is the Potential mood 
+\textit{Mood} describes a relation between an event and the speaker, including an assessment of the event's reality (CITE).
+An example is the Potential mood. In Hungarian, it is formed with -het (CITE): 
 
 \begin{tabular}{llll}
 a) & ismer-nek \\
@@ -336,37 +345,40 @@ b) & ismer-het-nek \\
 & `they can know' (Hungarian)
 \end{tabular}
 
-Mood may also be fused with tense and aspect; for instance, the Japanese suffix -\textit{yoo} can mark future tense and the hortative mood (`let's ...').
-Tense, aspect, mood are often together referred to as TAM (Tense-Aspect-Mood).
+Mood may also be fused with tense and aspect; for instance, the Japanese suffix -\textit{yoo} can mark future tense and the hortative mood (`let's ...', CITE).
+Tense, aspect, mood are often together referred to as TAM (Tense-Aspect-Mood, CITE).
 
 \textit{Subject person and number} mark categories of the subject, such as English third-person -s.
 
+While agreement is most commonly established with the subject, agreement with the object is found in Sesotho (CITE) and in Hungarian (CITE); it is fused with subject agreement in the latter case.
 
 
 While these are particularly common types of affixes, there are further types.
 Examples are polarity (negation), evidential (based on what evidence a speaker makes an assertion), and formality.
 
-Agreement with the object is found in Sesotho and in Hungarian; it is fused with subject agreement in the latter case.
+
 
 We focus on inflection, except in those cases where derivational affixes are clearly marked in available data.
 Inflectional suffixes are generally outside of derivational affixes
 
-
+% somewhere explain the choice of languages
+% - rich agglutinative.
+% - must have data with suitable morphological analysis.
+% - Among the languages, Hungarian and Finnish are genetically related (X millenia). There is also some evidence for genetic relations beyond these (Japanese, Korean, Turkish), but such relations would have to be quite ancient (x millenia).
+% The morphemes found in these languages as considered here are generally not cognate.
 
 \section{Methods}
 
 \subsection{Data} % TODO: Becky
 % why agglutinative?
 
-We are interested in analyzing languages in which words have easily separable morphemes and have a tendency to have more than two morphemes per word, because that allows us to vary morphemes distances. As such, we considered agglutinative languages that have morpheme-segmented corpora available. The language sample includes Universal Dependencies (UD) corpora for Japanese, Korean, Turkish, Hungarian, and Finnish (CITE). In addition, we use the Child Language Data Exchange System (CHILDES) Sesotho corpus (CITE). 
-We're interested in investigating languages where nouns are inflected with multiple suffixes, because that allows us to more extensively measure the relationship between mutual information and mutual information. As such, we only investigated our hypothesis on Turkish, Hungarian, and Finnish nouns. In contrast, we used all the languages for investigating verbs. What constitutes a noun or a verb was determined by looking at the syntactic category labels in the corpus. 
+We are interested in analyzing languages in which words have easily separable morphemes and have a tendency to have more than two morphemes per word, because that allows us to vary morpheme distances. As such, we considered agglutinative languages that have morpheme-segmented corpora available. The language sample includes Universal Dependencies (UD) corpora for Japanese, Korean, Turkish, Hungarian, and Finnish (CITE). In addition, we use the Child Language Data Exchange System (CHILDES) Sesotho corpus (CITE). 
+We're interested in investigating languages where nouns are inflected with multiple suffixes, because that allows us to more extensively measure the relationship between mutual information and mutual information. So, for nouns specifically, we only investigated our hypothesis on Turkish, Hungarian, and Finnish. In contrast, we used all the languages for investigating verbs. What constitutes a noun or a verb was determined by looking at the syntactic category labels in the corpus. 
 
-To investigate the memory-surprisal tradeoff of natural languages, we compare the efficency each natural language's morpheme orderings (\textit{real}) to three different kinds of baselines: randomized morpheme orderings (\textit{random}), the reversed natural orderings (\textit{reverse}), and morpheme orderings that are optimized to maximize MI (\textit{optimized}). 
+To investigate the memory-surprisal tradeoff of natural languages, we compare the efficiency each natural language's morpheme orderings (\textit{real}) to three different kinds of baselines: randomized morpheme orderings (\textit{random}), the reversed natural orderings (\textit{reverse}), and morpheme orderings that are optimized to maximize MI (\textit{optimized}). 
 
 In order to create these morpheme orderings, we first need to identify and label morphemes for each language. The Korean, Japanese, and Sesotho corpora have words segmented into the grapheme representations of their morphemes. However, the Turkish, Hungarian, and Finnish corpora do not segment the words into morphemes, but rather include a list of features (such as person, number, voice, etc.) present in each word. We built segmenters to reconstruct the order of morphemes in each word from those feature labels.
 \becky{TODO: see Appendix?} \mhahn{Yes, I think we can explain in the main paper what data we collected in linguistic terms (e.g. finite verb forms, what we did with auxiliaries), and in the appendix discuss what steps were needed to do this. The technical details don't have to be 100\% there since the code will be available to the reviewers and readers.}
-
-The Sesotho and Japanese data was previously used by CITE; we reanalyze these data here in a way consistent across all six languages.
 
 \begin{itemize}
     \item \mhahn{In the main paper, I think it's enough to present the Coarse+FinalSurprisal results. We can present others in the appendix, and don't need to introduce them here in detail.} %We built two different segmenters for each of the Turkish, Hungarian, and Finnish corpora. One version was ``coarse-grained," meaning that we recovered the order of suffixes in the word on an abstract level, such as a list of ``subject person, subject number." The other version was ``fine-grained," meaning that we used more specific labels for each suffix, such as ``2nd person, plural." In the models, each word is represented as its list of coarse-grained labels, and the model tries to predict the fine-grained labels based on the coarse-grained abstract morphemes. As such, the model tries to order the fine-grained labels, but the surprisal is calculated on the basis of the coarse-grained abstract morphemes.
@@ -376,14 +388,16 @@ The Sesotho and Japanese data was previously used by CITE; we reanalyze these da
     
     \item Grapheme, label, phoneme for Korean \mhahn{For now, I think we can place grapheme and phoneme versions into the appendix, and only discuss the MorphemeMeanings-based one in the main paper (i.e., ordering based on morpheme meanings, surprisal based on abstract morphemes, analogous to the Coarse+FineSurprisal version for the other languages.}
     The Korean corpus came with segmented morphemes labeled with fine-grained categories such as "ending final marker," or "predicative maker," which were the labels we used for the specific morpheme meaning segmenter. We also built a segmenter to take in each segment and output the abstract morpheme slot it fills (such as ``formality"), similar to the abstract slot labelling we did with Turkish, Hungarian, and Finnish. 
-    
+  
+The Sesotho and Japanese data was previously used by CITE; we reanalyze these data here in a way consistent across all six languages.
+
 For all the languages, we modelled surprisal on the level of the specific morphemes, and ordering on the level of the abstract morpheme slots. In essence, each word is represented as its list of abstract slots, and the model tries to predict the specific morphemes based on the abstract slots. As such, the model tries to order the abstract slots, but the surprisal is calculated on the basis of the specific morpheme meanings.
 
 
-\becky{Explain how optimization works.}
+\michael{Explain how optimization works.}
+\michael{Explain how we estimate surprisal.}
 \end{itemize}
 
-\becky{discuss segmenters more} 
 
 \subsection{Nouns}
 
@@ -395,7 +409,9 @@ In contrast, the number suffix, which is generally only marked for the plural, h
 
 
 \subsection{Verbs}
-For verbs, we investigated Finnish, Hungarian, Japanese, Korean, Sesotho, and Turkish inflectional suffixes. Broadly speaking, all of the languages have a real ordering of valence, voice, negation, tense/aspect/mood (TAM), person and number, and formality, where applicable. \becky{Check that this is correct and discuss some specifics.} 
+For verbs, we investigated Finnish, Hungarian, Japanese, Korean, Sesotho, and Turkish inflectional suffixes. Broadly speaking, all of the languages have a real ordering of valence, voice, negation, tense/aspect/mood (TAM), person and number, and formality, where applicable. \becky{TODO: Check that this is correct and discuss some specifics.} 
+
+\becky{Which language provides data for which kind of suffix?}
 
 \begin{table}[]
     \centering
@@ -431,18 +447,18 @@ For verbs on the other hand, we see a little bit more variance. In general, the 
 
 Figures \ref{fig:real_and_optimized_nouns} and \ref{fig:real_and_optimized_verbs} show the comparison of natural languages' morpheme orders to morpheme orders that are optimized to reduce AUC, for nouns and verbs respectively. The real and optimized noun orders show a perfect match, and the real and verb optimized orders also agree for the most part. Divergences in the real and optimized verbal morpheme orders will be analyzed more in the Discussion section. 
 
-\becky{Give an introduction to the universal} Figure \ref{fig:optimized_and_universal_orders} compares Bybee's proposed universal verbal morpheme ordering to the optimized ordering for each language, which minimizes AUC. Once again, we see a high level of agreement between the optimized order and Bybee's universal order. We will compare each specific language's verbal morpheme ordering to the universal order, only for morphemes that are present both in the natural languages and in Bybee's universal order.
+\becky{Refer to S3 to introduce this paragraph} Figure \ref{fig:optimized_and_universal_orders} compares Bybee's proposed universal verbal morpheme ordering to the optimized ordering for each language, which minimizes AUC. Once again, we see a high level of agreement between the optimized order and Bybee's universal order. We will compare each specific language's verbal morpheme ordering to the universal order, only for morphemes that are present both in the natural languages and in Bybee's universal order.
 
 For Finnish, the optimized order is the same as the universal order except for the fact that the agreement marker comes closest to the root instead of furthest. However, this is because person and number is not marked for passive forms of verbs, meaning that the inclusion of a person and number agreement marker provides an unusual amount of information, since it also shows that the verb is not passive. Therefore, the agreement marker has high MI with the root, and is placed closer to the root. 
 Hungarian, Korean, and Sesotho suffixes match the universal ordering perfectly. 
 Sesotho prefixes also match the universal ordering perfectly, considering that the order of prefixes should be reversed because the universal ordering is about distance from the root, rather than the absolute position, which is shown for suffixes.
 In addition, Turkish is a close match to the universal order, except for one artefact of the Turkish person-marking system, which is that the use of the 3rd person plural agreement marker ``-lar-" causes certain tense/aspect/mood (TAM) suffixes to come after it. Excluding the irregularity of the 3rd person plural marker, Turkish's optimized order perfectly matches Bybee's universal order. 
-\becky{What's happening with Japanese?}
+\becky{Finish Japanese.}
 
 Taking a step back and looking at all of these languages at a whole, we see that the languages' optimized orders tend to closely mirror Bybee's universal ordering, which also means that these languages also have a high level of agreement between them on the relative ordering of verbal morphemes. As such, it's possible to predict Bybee's universal ordering from looking at commonalities between optimized orders of natural languages. 
 
 
-\becky{TODO: discuss each lg, conclude}
+\becky{conclude}
 
 \begin{figure}
     \centering
@@ -615,7 +631,8 @@ We compared actual morpheme orderings to other possible orderings and to orderin
 In most cases, we found that the real ordering provided more efficient tradeoffs than most alternative orderings.
 More importantly, we found that the real orderings match the optimal orderings in many respects.
 Ordering forms found in a corpus according according to real or optimized orderings yields the same orders in XXX of cases.
-In some cases, particlarly for noun inflection, match between real and optimized orderings is perfect.
+In some cases, particularly for noun inflection, match between real and optimized orderings is perfect.
+Beyond language-specific ordering patterns, optimization recovers several previously-documented language universals of morpheme order.
 
 \subsection{Relation to previous accounts}
 
@@ -623,56 +640,98 @@ In some cases, particlarly for noun inflection, match between real and optimized
 
 In this section, we discuss the linguistic literature on morpheme ordering.
 
-\paragraph{Meaning and Scope}
+\paragraph{Levels of Linguistic Description}
+
+Morpheme ordering has been described from the perspective 
+
+Besides the explanation of broad typological tendencies, which we are interested in here, the linguistic literature has also debated at which level of linguistic representation morpheme ordering should be described, proposing accounts located at different levels such as the syntax-phonology interface \citep{baker1985the} and an autonomous layer of morphological description \citep{hyman2003suffix}.
+%TODO also template vs scope vs...
+We do not see the memory--surprisal tradeoff as competing with or contradicting these studies.
+Rather, it specifies tendencies for ordering that could be implemented at different levels of linguistic description.
+
+
+%\paragraph{Revelance and Proximity}
 As mentioned in section \becky{cite S2}, Bybee proposes a concept of \textit{semantic relevance}, which is the degree to which one morpheme affects the semantic content of the other \becky{cite bybee}. She hypothesizes that morphemes that are more highly relevant to each other should be closer to each other, and therefore proposes a universal ordering of verbal inflectional morphemes. For example, attaching a causative marker to a root meaning "to die" produces a verb form meaning "to kill." Since the causative greatly changes the semantic content of the original root, the causative is highly relevant to the root. 
 
 \becky{Format Korean example of juk-da ``to die" and juk-i-da ``to kill"}
 
 Bybee did not provide a way to computationally measure semantic relevance. However, our optimized orders of Turkish and Hungarian \becky{Are there other languages?} perfectly match Bybee's proposed universal verbal inflection order \becky{need a figure comparing optimized order to Bybee's order}. This suggests that high mutual information generally correlates with semantic relevance. 
 
-Besides Bybee's account in terms of relevance, there are also accounts focusing on semantic scope \citep{rice2000morpheme}.
 
-Also noted scope: \citep{baker1988incorporation,foley1984functional,chierchia1990meaning,valin1992a}
+A related family of explanations holds that those affixes are closest to the root that are most relevant to the root \citep{bybee-morphology-1985}.
+Other explanations suggest that morphemes are ordered based on (TODO CITE).
+The most straightforwardly related account is that of Bybee (1985) Semantic relevance
+CARP template in Bantu
+Explanations for the orders
+
+talk about Relevance and Mutual Information
 
 
-
-\paragraph{Morpheme Order and Word Order}
+%\paragraph{Morphemes as Fossilized Words}
 It has long been observed that the order of morphemes often parallels the order of independent words of corresponding meanings \citep{givon1971historical,venneman1973explanation,baker1985the}.
 It has been argued that the order of morphemes reflects the order of formerly independent elements that have been fossilized into bound morphemes \citet{givon1971historical,venneman1973explanation}.
 As the memory-surprisal tradeoff is optimized by word order, this is compatible with our results:
 To the extent that morpheme order does reflect fossilized word order, morpheme order should continue to reflect optimization for the tradeoff.
 
 On the other hand, \citet{bybee-morphology-1985} points out that there are historically documented cases where morpheme ordering has been restructured in ways that do not reflect former independent words, but respect the universal tendencies proposed by her (see also \citet{mithun2000the, haspelmath1993the, mithun1995affixation}; \citet[Section 15]{rice2000morpheme}).
-
-
-\paragraph{Levels of Linguistic Description}
-Besides the explanation of broad typological tendencies, which we are interested in here, the linguistic literature has also debated at which level of linguistic representation morpheme ordering should be described, proposing accounts located at different levels such as the syntax-phonology interface \citep{baker1985the} and an autonomous layer of morphological description \citep{hyman2003suffix}.
-TODO also template vs scope vs...
-We do not see the memory--surprisal tradeoff as competing with or contradicting these studies.
-Rather, it specifies tendencies for ordering that could be implemented at different levels of linguistic description.
+As a theory of order at multiple levels, the memory-surprisal tradeoff predicts these ordering patterns independent of the historical path leading to the morphemes found in a given language.
 
 
 
+syntax-phonology interface \citep{baker1985the} 
+For instance, 
+\cite{baker1985the} proposed the Mirror Principle, which -- informally -- states that the order of elements (morphemes) in morphology reflects the order of elements (words) in syntax.
 
-%One family of explanations holds that those affixes are closest to the root that are most relevant to the root \citep{bybee-morphology-1985}.
-%Other explanations suggest that morphemes are ordered based on (TODO CITE).
-%The most straightforwardly related account is that of Bybee (1985) Semantic relevance
-%CARP template in Bantu
-%Explanations for the orders
-%A related, though different, account is in terms of semantic scope \cite{rice2000morpheme}.
-%The scope hypothesis is attractive for some morphemes.
-%For instance, 
-%\cite{baker1985the} proposed the Mirror Principle, stating that the order of morphemes reflects ...
+Also noted scope: \citep{baker1988incorporation,foley1984functional,chierchia1990meaning,valin1992a}
+
+
 %This can be related to the scope-based explanation to the extent that syntactic structure and word order reflect scope.
-%\cite{muysken1981quechua}
-%\cite{mccarthy2008generalized} phonology
-%\cite{hyman2003suffix}
-%\cite{kanu2009suffix} morphotactics, not semantic scope
+% INTERESTING reference: http://www.jzeller.de/pdf/CARP.pdf
 
+%\paragraph{Semantic Scope}
+
+
+A related account is in terms of semantic scope \cite{rice2000morpheme}.
+The relative ordering of valence and voice is a good example for the scope-based explanation.
+Valence affixes change the number of arguments, and passive (voice) promotes one argument to the subject position.
+This can affect an argument introduced by a voice marker.
+The following example from Turkish illustrates this (\cite{schaaik2020turkish}, section 30.8.2):
+
+\begin{tabular}{ccccccc}
+don-dur-ul & freeze-caus-pass & be frozen \\
+don-dur & freeze-caus & to freeze (something) \\
+don & freeze& to freeze \\
+\end{tabular}
+
+In contrast, adding the passive marker to the root \textit{don} is illicit as the root verb is intransitive.
+
+Description in terms of scope faces limitations when order is different from semantic scope.
+Hyman  (2003:  249) proposed the CARP template to describe suffix order in Bantu languages (such as Sesotho), a templatic order for valence and voice morphemes that can be different from scope order.
+
+\paragraph{Templates}
+CARP template
+
+
+\cite{muysken1981quechua}
+
+\cite{mccarthy2008generalized} phonology
+
+\cite{hyman2003suffix}
+
+\cite{kanu2009suffix} morphotactics, not semantic scope
+
+
+
+See SI Apenndix Section X for simulations arguing that scope and mutual information may correlate.
 
 %\subsection{Relevance; Proximity; Iconicity}
 
 %The relation  between mutual information and relevance
+
+
+
+
+
 
 \subsection{Beyond Agglutionation}
 
@@ -690,7 +749,21 @@ non-concatenative morphology (in Arabic, k-t-b `to write' forms katab- `wrote'. 
 
 \subsection{Limitations}
 
-- genre of data: written
+- genre of data: written. but Sesotho is spoken (child-directed)
+
+
+- limitations of computational estimation of the memory-surprisal tradeoff
+
+As the set of all moprphological forms of a language is typically finite (CITE), we believe that these limitations play a smaller role in morpheme order, compared to word order.
+
+
+A further limitation relates to the selection of languages.
+The six languages considered in this study are spoken in Eurasia and Africa, not representing Australia and America.
+Among the languages, Hungarian and Finnish are genetically related (X millenia).
+There is also some evidence for genetic relations beyond these (Japanese, Korean, Turkish), but such relations would have to be quite ancient (x millenia).
+The morphemes found in these languages as considered here are generally not cognate.
+Thus, the commonalities in languages found cannot be traced to inherited orderings of morphemes inherited from a common ancestor.
+Furthermore, we note that the optimality of different orderings crucially depend not on the morphemes themselves (which might be inherited), but on the frequencies of different forms (e.g., of sinulars and plurals).
 
 
 
@@ -1030,42 +1103,44 @@ In Figure~\ref{tab:turkish-yapmak}, we show how our segmentation corresponds to 
 
 \begin{table}
 \begin{tabular}{llllllll}
+Slot & Label & Function & Morphs & Reference \\ \hline
 \hline
 Valence &   & Causative\\
 \hline
 Voice &   & Passive\\
-\hline
-Polite &   & \\
+%\hline
+%Polite &   & \\
 \hline
 Polarity  & MA & Negation & \\
 \hline
-Mood \\
+Mood  & EBIL & Abilitative & -Ebil & \cite{schaaik2020turkish}, section 21 \\
+      & IN   & Imperative & -In & \cite{schaaik2020turkish}, section 18.1 \\
 \hline
-TAM1      & AR & Aorist, nonpast, direct \\
+TAM1      & AR & Aorist, nonpast, direct & -(I/E)r, (-mE)-z  & \cite{schaaik2020turkish}, section 20.5 (`Present-2') \\
           & IYOR & Imperfective, direct & Aspect=Prog\\
-          & ACAK & Prospective, nopast, direct\\
-          & MIS1  & Perfective, indirect \\
-          & TI & Perfective, past, direct \\
-\hline
-V Noun &  \\
+          & ACAK & Prospective, nopast, direct & & \cite{schaaik2020turkish}, section 20.2\\
+          & MIS1  & Perfective, indirect & & \cite{schaaik2020turkish}, section 20.3\\
+          & TI & Perfective, past, direct & -dI & \cite{schaaik2020turkish}, section 20.4\\
+%\hline
+%V Noun &  \\
 \hline
 3rd Plural& \textsc{lar}$_{7}$ & 3rd Plural\\
 \hline
-TAM2      & MUS2 & Aorist/Imperfective, indirect \\
-          & DU & imperfective, past, direct \\
+TAM2      & MUS2 & Aorist/Imperfective, indirect & -mIs & \cite{schaaik2020turkish}, section 24.2 \\
+          & DU & imperfective, past, direct &  & \cite{schaaik2020turkish}, section 24.1.3 \\
 \hline
 Agreement & IM & 1st singular\\
           & SIN &2nd singular\\
           & IZ  & 1st plural\\
           & SINIZ & 2nd plural \\
           & K     & 1st plural, past direct \\
-\hline
-Poss Num/Pers & \\
+%\hline
+%Poss Num/Pers & \\
 \hline
 Gen & \\
 \hline
 \end{tabular}
-\caption{Suffixes in Turkish}\label{tab:turkish-suffixes}
+\caption{Verb suffixes in Turkish, arranged by slot.}\label{tab:turkish-suffixes}
 \end{table}
 
 
@@ -1086,19 +1161,19 @@ In Figure~\ref{tab:hungarian-paradigms}, we show how our segmentation correspond
 \begin{table}
     \centering
     \begin{tabular}{lllllllll}
-    \hline
-Valence	    & AT & Causative \\ \hline
-Mood	    & HET & Potential \\
-         & N & conditional \\
-         & J & subjunctive \\
+    Slot & Morpheme & Function & Reference    \\ \hline\hline
+Valence	    & AT & Causative &   \cite{rounds2001hungarian} 4.5.3 \\ \hline
+Mood	    & HET & Potential &   \cite{rounds2001hungarian} 4.5.1  \\
+         & N & conditional &   \cite{rounds2001hungarian} 4.3.7 \\
+         & J & subjunctive &   \cite{rounds2001hungarian} 4.3.5 \\
 \hline
-Tense& T & indicative past \\
+Tense& T & indicative past &  \cite{rounds2001hungarian} 4.3.3 \\
          \hline
-Finiteness  & NI & Infinitive \\
+Finiteness  & NI & Infinitive  &  \cite{rounds2001hungarian} 4.4.4 \\
 \hline
 %Definiteness & I & definite 2/3pl \\
 %         \hline
-Agreement (Obj+Subj)         & EK & 1sg indefinite present\\
+Agreement (Obj+Subj)         & EK & 1sg indefinite present & \cite{rounds2001hungarian} 4.3 \\
          & EL & 2sg present\\
          & UNK & 1pl present\\
          & TEK & 2pl\\
@@ -1333,6 +1408,27 @@ However, this is rare in the data, occurring only three times in the training se
     \item Clitic
 \end{enumerate}
 
+
+\section{Controlling for Vowel Harmony}
+\subsection{Vowel Harmony in Turkish}
+
+\url{https://turkishexplained.com/vh1.htm}
+
+
+Turkish vowel harmony can largely be described in terms of two underlying vowels ``A'' and ``I'' whose realization depends on the last preceding vowel.
+
+
+
+    \begin{tabular}{l|llllll}
+        Preceding & A & I \\ \hline
+        a, I & a & I \\
+        e, i & e & i \\
+        o, u & a & u \\
+        {\"o}, {\"u} & e & {\"u}
+    \end{tabular}
+    
+For most suffixes, vowel harmony can be encoded in terms of one underlying form.
+The suffix AR$_6$ has the form ``Ar'' after most monosyllabic stems, and ``Ir'' after multisyllabic stems or one of 13 exceptional monosyllabic stems.
 
 
 \end{document}
