--- a/literature.bib
+++ b/literature.bib
@@ -57767,4 +57767,18 @@ African Linguistics",
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1524128662",
 	year="2010"
 }
+@book{rounds2001hungarian,
+	title="Hungarian: An Essential Grammar",
+	author="Carol Howe {Rounds}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1511725911",
+	year="2001"
+}
+
+
+@book{schaaik2020turkish,
+	title="The Oxford Turkish Grammar",
+	author="Gerjan van Schaaik",
+	year="2020",
+	publisher="Oxford University Press"
+}
 
